SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

When "Find in SQL result" panel is hidden the SQL editor regains focus.
  This is convenient when a keyboard shortcut was assigned to the "Find in SQL result" function.

New tool bar button: Got to last edit location. Moves the SQL editor's cursor to the last edited location.

SQL execution: When result rows are being read, the number of rows read is displayed below the elapsed execution time.

Extension of keyboard shortcuts configuration: Existing default shortcuts can now also be removed instead of just replaced.

Made most menu entries of the table's right mouse menu work with keyboard shortcuts.
  Note: Most menus don't have predefined keyboard shortcuts.
        They may be defined using menu File --> "Global Preferences" --> tab "Keyboard shortcuts"

Extension of keyboard shortcuts configuration: Actions that don't have default shortcuts can now be assigned shortcuts.

Charts for SQL results now allow to plot differences of column values.
  See tab "Overview/Charts" of a SQL result --> Toggle button "Charts" on the right --> tab "Differences".
  Possible application: A program may log steps into a database table.
  If the differences between log timestamps are plotted against the timestamps themselves
  the plot shows if and how the program's performance changes.
  With this feature the JFreeChart version SQuirreL uses was upgraded to version 1.5.0.

About dialog displays supported and current command line arguments.

SQuirreL does not use the JDK Preference API anymore. Instead the according properties are
  written to the file <userdir>/props.properties. If one now copies a <userdir> from one machine to another