@@ -75,3 +75,4 @@ TableCopyAsMarkdownCommand.failed.to.copy=Copy as markdown failed because of mis
 TablePopupMenu.CopySelectedRowsToOwnWindow=Copy selected rows to new window
 TablePopupMenu.ColorSelectedRows=Color selected rows
 TablePopupMenu.GotoColor=Go to color
+TablePopupMenu.CopyColoredRowsToNewWindow=Copy colored rows to new window
